# DesafioAidTecSolutions

./: .check.sh  .gitignore  Dockerfile  LICENSE  README.md  check.sh  make_dataset.sh  make_features.sh  make_prediction.sh  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  setup.cfg  setup.py  tox.ini  train_model.sh  transformacion_vinos.ktr  update_readme.py
.github/workflows/: tests.yml
data/processed/: calidad_vino_AT-_train.csv-corregir_alcohol-corregir_densidad-ratio_diox-rbf_diox-drop=['color', 'year', 'alcohol', 'densidad'].csv  calidad_vino_STM_v01.csv  test.csv-corregir_alcohol-corregir_densidad-densidad_alcohol_interaction-ratio_diox-rbf_diox-shuffle-drop=color-densidad-alcohol-year-dioxido_de_azufre_libre-calidad.csv  test_with_preds.csv  train.csv-corregir_alcohol-corregir_densidad-densidad_alcohol_interaction-ratio_diox-rbf_diox-shuffle-drop=color-densidad-alcohol-year-dioxido_de_azufre_libre.csv  train.csv-corregir_alcohol-corregir_densidad-drop=alcohol-densidad-year-color.csv  train.csv-corregir_alcohol-corregir_densidad-shuffle-drop=['year', 'color', 'alcohol', 'densidad'].csv  train.csv-corregir_alcohol-corregir_densidad-shuffle.csv
data/raw/: y_train.csv
docs/: conf.py  index.rst
docs/usage/: build_features.rst  make_dataset.rst  predict_model.rst  (+1 more)
models/: wine_label_encoder.joblib
notebooks/: 01_stm_exploracion_inicial_correccion_valores_AidTec_Solutions.ipynb  02_stm_feature_engineering.ipynb
tests/: conftest.py  test_build_features.py  test_example.py  test_make_dataset.py  test_predict_model.py  test_train_model.py
(+14 files in other folders)
