[metadata]
name = DesafioAidTecSolutions
version = 0.1.0
description = Desafío Kopuru de WineQuality con AidTec Solutions
author = Sergio Tejedor Moreno
author_email = tejedor.moreno@gmail.com
license = Apache
license_file = LICENSE
platforms = linux, win32

[options]
packages =
    aidtecsolutions
install_requieres =
    tensorflow
    pandas
    keras
    numpy
    scikit-learn
    sweetviz
    xgboost
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 200

[options.package_data]
aidtecsolutions = py.typed